# jango-lab-8

./: db.sqlite3  pyproject.toml
django_auth/: settings.py  urls.py
templates/: base.html  messages.html
templates/registration/: login.html  signup.html
templates/users/: home.html
users/: urls.py  views.py
